--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="./css/styles.css">
+    <link href="./lib/angularjs-datepicker/src/css/angular-datepicker.css" rel="stylesheet" type="text/css" />
 
     <!-- Angular Scripts -->
     <!-- NOTE: removing the ".min." can help debugging in the console-->
@@ -39,5 +40,6 @@
     $(document).foundation();
     </script>
     <script src="http://localhost:35729/livereload.js"></script>
+    <script src="./lib/angularjs-datepicker/src/js/angular-datepicker.js"></script>
 </body>
 </html>
